tests/build/fail/widget_new/missing_field_all_multi.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> $DIR/missing_field_all_multi.rs:9:31
    |
9   |         background_gradient = { }
    |                               ^^^
    |                               |
    |                               supplied 1 argument
    |                               expected 2 arguments
    |
note: associated function defined here
   --> $DIR/visual.rs:119:1
    |
119 | #[property(inner)]
    | ^^^^^^^^^^^^^^^^^^
    = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
